fixes modals and exit button so they are properly aligned. Export Script Modal has strange behavior, starting halfway down the page. Not sure why, but all the other modals are consistent. Pushing for now.

--- a/styles/index.css
+++ b/styles/index.css
@@ -183,9 +183,13 @@ section {
 /* Settings Box */
 .settings-box {
   margin: auto;
+  padding-top: 25px;
+  left: 0;
+  right: 0;
   text-align: center;
-  width: 400px;
-  /*height: 450px;*/
+  position: absolute;
+  width: 700px;
+  height: auto;
   background-color:rgb(31, 31, 31);
   border-radius: 20px;
   color: rgb(235, 235, 235);
@@ -216,8 +220,12 @@ section {
 .about-box {
   margin: auto;
   padding: 25px 20px;
-  width: 650px;
-  height: 600px;
+  left: 0;
+  right: 0;
+  text-align: center;
+  position: relative;
+  width: 700px;
+  height: auto;
   background-color:rgb(31, 31, 31);
   border-radius: 20px;
   color: rgb(235, 235, 235);
@@ -234,7 +242,7 @@ section {
 #exit-popup {
   position: absolute;
   border: none;
-  color: white;
+  color: red;
   background-color: transparent;
   font-size: 30px;
   right: 20px;
@@ -253,9 +261,9 @@ button {
   left: 0;
   right: 0;
   text-align: center;
-  position: absolute;
+  position: relative;
   width: 700px;
-  height: 450px;
+  height: auto;
   background-color:rgb(31, 31, 31);
   border-radius: 20px;
   color: rgb(235, 235, 235);
@@ -289,12 +297,13 @@ button {
 .name-box {
   margin: auto;
   padding-top: 25px;
+  padding-bottom: 25px;
   left: 0;
   right: 0;
   text-align: center;
   position: absolute;
   width: 700px;
-  height: 150px;
+  height: auto;
   background-color:rgb(31, 31, 31);
   border-radius: 20px;
   color: rgb(235, 235, 235);
